--- a/Arbitrage-Lab/__main__.tex
+++ b/Arbitrage-Lab/__main__.tex
@@ -3,39 +3,44 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage{/Users/jesusvillotamiranda/Documents/LaTeX/JVM_Paper}
 %----------------------------------------------------
-\title{\textsc{
+\title{
+\textsc{
 \Large 
-%Highly-leveraged Dollar-neutral Copula-based  
-Pairs-Trading %with 
-a Sparse Synthetic Control 
+Pairs-Trading a Sparse Synthetic Control 
 }
 }
 
 \author[1]{
 {  
-{\large Jesus Villota Miranda}$^{\dagger}$
-\footnote{
-\scriptsize{
-%%I am deeply grateful to [...].
-%% This paper is intended for academic purposes only and does not constitute financial advice. The strategies and methodologies discussed involve risks, including the potential loss of capital. Past performance is not indicative of future results, and the authors assume no liability for decisions made by individuals or entities based on the content of this research. 
-%%Finally, 
-I gratefully acknowledge financial support from the Santander Research Chair at CEMFI.
+{
+%----------------------------------------------------
+%\large 
+%Jesus Villota Miranda}$^{\dagger}$
+%\footnote{
+%\scriptsize{
+%%%I am deeply grateful to [...].
+%%% This paper is intended for academic purposes only and does not constitute financial advice. The strategies and methodologies discussed involve risks, including the potential loss of capital. Past performance is not indicative of future results, and the authors assume no liability for decisions made by individuals or entities based on the content of this research. 
+%%%Finally, 
+%I gratefully acknowledge financial support from the Santander Research Chair at CEMFI.
+%----------------------------------------------------
 }
 }
 }
 
 \bx 
 {\small
-$\big{<}$
-\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
-$\big{>}$
-
-$\big{<}$
-Email: \href{mailto:jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
-$\big{>}$
-
-\small \textbf{This version: \mydate\today}
-}
+%----------------------------------------------------
+%$\big{<}$
+%\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
+%$\big{>}$
+%
+%$\big{<}$
+%Email: \href{mailto:jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
+%$\big{>}$
+%
+%\small \textbf{This version: \mydate\today}
+%}
+%----------------------------------------------------
 }
 \date{}
 %----------------------------------------------------
@@ -67,6 +72,9 @@ $\big{>}$
 
 %%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
 \input{txt_2_Methodology.tex}
+
+%%%%%%%%%%%%%%%%%% BARRA Model %%%%%%%%%%%%%%%%%%%%%%
+\input{txt_A_barra_model.tex}
 
 %%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
 \input{txt_3_TradingStrategy.tex}
