--- a/Arbitrage-Lab/txt_A_barra_model.tex
+++ b/Arbitrage-Lab/txt_A_barra_model.tex
@@ -1,4 +1,16 @@
 \subsection{Barra model}
+
+
+Before proceeding with the formulation of our pairs trading approach, it is essential to understand the economic drivers behind the relative performance between our target and synthetic assets. While our sparse synthetic control methodology creates a close replicating portfolio, any pairs trading strategy fundamentally relies on exploiting temporary divergences in pricing relationships. Therefore, a rigorous factor-based analysis provides critical insights into the structural sources of these divergences.
+
+To this end, we employ the Barra factor model framework, which decomposes the returns of both target and synthetic assets into systematic components (fundamental and industry factors) and idiosyncratic components. This decomposition serves multiple purposes in our research:
+
+First, it provides economic interpretation of the spread returns by quantifying how much of the relative performance is driven by different factor exposures versus pure alpha. Second, it validates the quality of our synthetic control construction by measuring how closely the factor exposures match between target and synthetic assets. Third, it identifies specific factor tilts that persist even after optimization, potentially representing structural drivers of spread returns that our trading strategy can exploit.
+
+By understanding these factor relationships before developing trading signals, we can distinguish between transient mispricings (which represent opportunities) and permanent structural differences (which represent risks). This factor-based foundation also helps explain why certain statistical relationships identified by our copula models may exist, providing theoretical underpinning to the empirical patterns we observe in subsequent sections.
+
+%The Barra model thus serves as a critical bridge between our synthetic asset construction and trading signal generation, ensuring that our overall approach is grounded in economic intuition rather than relying solely on statistical patterns.
+
 The Barra model for our target and synthetic asset may be written as
 \begin{align*}
 \2{\v{r_t \\ r_t^*}} =
@@ -144,119 +156,16 @@ Both the unrestricted and restricted models are estimated with Heteroskedasticit
 %----------------------------------------------------
 
 
+\cref{tab:barra_model} presents the results of our Barra model decomposition using the Principal Component Regression (PCR) approach described above. This table provides insights into the factor exposures that drive the relative performance between our target and synthetic assets.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%The Barra model may be written
-%%
-%%\begin{align*}
-%%r_t &= \alpha \;+ \mathbf{f}_{t}\' \b \beta \;\;+ \mathbf{i}_{t}\' \b \gamma \;+ \varepsilon_t,
-%%\\
-%%r_t^* &= \alpha^* + \mathbf{f}_{t}\' \b \beta^{*} + \mathbf{i}_{t}\' \b \gamma^{*}   + \varepsilon_t,
-%%\end{align*}
-%%
-%\begin{align*}
-%\2{\v{r_t \\ r_t^*}} =
-%\2{\v{\alpha \\ \alpha^*}} 
-%+ 
-%\2{\v{\b \beta\' \\ \b \beta^{*\'}}} 
-%\mbf f_t
-%+
-%\2{\v{\b \gamma\' \\ \b \gamma^{*\'}}} 
-%\mbf i_t
-%+
-%\2{\v{\eps_t \\ \eps_t^*}} 
-%\end{align*}
-%
-%where we consider $K$ fundamental factors $\mbf f_t$ (i.e.: $\b \beta, \b \beta^*, \mbf f_t \in \mathbb R^K$) and $M$ industry factors $\mbf i_t$ (i.e.: $\b \gamma, \b \gamma^*, \mbf i_t \in \mathbb R^M$).
-%%
-%The \qquote{active return} between the target and synthetic asset is given by:
-%$$
-%\dot{r}_t := r_t - r_t^* = (\alpha - \alpha^*) + (\b \beta - \b \beta^*)\'\mbf f_t +  (\b \gamma - \b \gamma^*)\'\mbf i_t + (\eps_t - \eps_t^*)
-%.
-%$$
-%Now defining the \textit{relative alpha, beta and gamma}, respectively, as
-%$$
-%\dot{\alpha}:= (\alpha - \alpha^*),
-%\qquad 
-%\dot{\b \beta} := (\b \beta - \b \beta^*),
-%\qquad 
-%\dot{\b \gamma} := (\b \gamma - \b \gamma^*),
-%$$
-%and setting $\dot{\eps}_t := (\eps_t - \eps_t^*)$, we may write the model in terms of the portfolio's active return as:
-%$$
-%\dot{r}_t = \dot{\alpha} + \dot{\b \beta}\' \mbf f_t + \dot{\b \gamma}\' \mbf i_t + \dot{\eps}_t
-%.
-%$$
-%
-%Given that the industry factors exhibit a high level of correlation, we need to perform an orthogonal regression to avoid multicollinearity.
-%
-%\subsection{Orthogonal Regression Procedure}
-%
-%To estimate the model parameters, we employ an orthogonal regression approach based on Principal Component Analysis (PCA) to address potential multicollinearity among the factors. This procedure allows us to obtain more stable and interpretable estimates of the factor exposures. The implementation follows these steps:
-%
-%\begin{enumerate}
-%    \item \textbf{Data Preparation}: We compute the active returns (spreads) between the target and synthetic assets:
-%    \begin{equation}
-%    \dot{r}_t = r_t - r_t^*
-%    \end{equation}
-%    and align the factor data with these active returns.
-%    
-%    \item \textbf{Factor Standardization}: We standardize all factors (both Fama-French and industry factors) to have zero mean and unit variance:
-%    \begin{equation}
-%    \tilde{\mbf{x}}_t = \frac{\mbf{x}_t - \bar{\mbf{x}}}{\sigma_{\mbf{x}}}
-%    \end{equation}
-%    where $\mbf{x}_t = [\mbf{f}_t', \mbf{i}_t']'\in\mathbb R^J$ represents the combined factor vector, with $J=K+M$.
-%    
-%    \item \textbf{Principal Component Analysis}: We compute the covariance matrix of the standardized factors and obtain its eigendecomposition. Define $\mbf \Sigma := \text{Cov}(\tilde{\mbf{x}}_t)\in \mathbb R^{J\times J}$, then
-%    \begin{align*}
-%    \mbf \Sigma \mbf V &= \mbf \Lambda \mbf V,
-%    \end{align*}
-%    where $\mbf \Lambda:=\diag(\lambda_1,...,\lambda_J)\in \mathbb R^{J\times J}$ are the eigenvalues and $\mbf{V} = [\mbf{v}_1,...,\mbf{v}_J]\in \mathbb R^{J\times J}$ are the corresponding eigenvectors, both sorted in descending order of the $\lambda$'s. The principal components are then calculated as:
-%    \begin{equation}
-%    \mbf{p}_t = \mbf{V}\' \tilde{\mbf{x}}_t
-%    \end{equation}
-%    
-%    \item \textbf{Regression on Principal Components}: We regress the active returns on the principal components:
-%    \begin{equation}
-%    \dot{r}_t = a^{(u)} + \sum_{i=1}^J b^{(u)}_i p_{t,i} + \nu_t^{(u)}
-%    \end{equation}
-%    where $a^{(u)}$ is the \qquote{unrestricted} intercept, $\b b^{(u)}:=[b^{(u)}_1,...,b^{(u)}_J]$ are the \qquote{unrestricted} coefficients for each principal component, and $\nu_t$ is the error term.
-%    
-%    \item \textbf{Selection of Significant Components}: We select only the statistically significant principal components at the $0.05$ significance level:
-%    \begin{equation*}
-%    \mathcal{S} = \{i : p\text{-value}(b_i^{(u)}) < 0.05\}
-%    \end{equation*}
-%    
-%    \item \textbf{Restricted Model}: We estimate a restricted model using only the significant principal components:
-%    \begin{equation*}
-%    \dot{r}_t = a^{(r)} + \sum_{i \in \mathcal{S}} b_i^{(r)} p_{t,i} + \nu_t^{(r)}
-%    \end{equation*}
-%    This unrestricted and restricted models are estimated with Heteroskedasticity and Autocorrelation Consistent (HAC) standard errors using a maximum lag of 5 periods to account for potential serial correlation and heteroskedasticity in the residuals. 
-%    
-%    \item \textbf{Transformation to Factor Space}: Finally, we transform the coefficients back to the original factor space. Let $\b b^{(r)}\in \mathbb R^J$ denote the vector filled with $b_i^{(r)}$ if $i\in \mathcal S$ and 0 otherwise. Then, we can write
-%$
-%\dot r_t 
-%= a^{(r)} + \mbf p_t\' \b b^{(r)}+\nu_t^{(r)} 
-%= a^{(r)} + \tilde{\mbf x}_t\' \mbf V \b b^{(r)}+\nu_t^{(r)}
-%$. Thus, by
-% by setting $\dot \alpha = a^{(r)}$ and
-%    \begin{align*}
-%%	\dot{\beta}_k &= \sum_{i \in \mathcal{S}} b_i^{(r)} v_{k,i}	
-%	\2{\v{\dot{\b \beta} \\ \dot{\b \gamma}}} = \mbf V \b b^{(r)}
-%    \end{align*}
-%    we recover the factor betas and gammas while avoiding the instability due to multicollinearity.
-%\end{enumerate}
-%
-%This approach offers several advantages. First, by using orthogonal principal components, we eliminate multicollinearity concerns. Second, by selecting only significant components, we reduce dimensionality and potential overfitting. Finally, the transformation back to the original factor space allows for direct interpretation of the factor exposures $\dot{\beta}$ and $\dot{\gamma}$ in our active return decomposition model.
-%
-%For robustness, we repeat this procedure with various industry factor classifications, ranging from 10 to 49 industries, to assess the sensitivity of our results to the industry granularity. If no principal components are found to be statistically significant at the 5\% level, we default to an intercept-only model, effectively attributing the entire active return to the $\dot{\alpha}$ term.
-%
-%
+The relative alpha ($\dot \alpha$) represents the portion of active returns not explained by factor exposures. In both the training and testing periods, the relative alpha is not statistically significant ($p$-values of 0.6766 and 0.1419, respectively), suggesting that factor exposures, rather than idiosyncratic effects, are the primary drivers of the spread between target and synthetic assets. The alpha changes from -0.0002 in the training period to 0.0009 in the testing period, though this difference remains statistically insignificant.
 
+Among the fundamental factors, several notable patterns emerge. The profitability factor (\texttt{RMW}) exhibits the largest positive exposure in the training period (0.6985), indicating that the target asset tends to outperform the synthetic asset when profitability is rewarded in the market. In the testing period, the most substantial exposure shifts to the long-term reversal factor (\texttt{LT\_REV}) with a coefficient of 0.4929. Interestingly, the value factor (\texttt{HML}) shows a consistent negative exposure across both periods, becoming more pronounced in the testing period (-0.4563). This suggests that the target asset tends to underperform the synthetic asset during periods when value stocks outperform growth stocks.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The industry factor exposures reveal significant sector-based drivers of the spread returns. The machinery sector (\texttt{Machn}) shows the strongest positive exposure in both periods, dramatically increasing from 0.4337 in training to 1.0429 in testing. This indicates that the target asset has significantly higher exposure to the machinery sector compared to the synthetic asset. Conversely, the retail sector (\texttt{Rtail}) demonstrates the most substantial negative exposure in both periods (-0.5772 and -0.6114), suggesting that the synthetic asset has greater retail exposure than the target. Other sectors with notable negative exposures include \texttt{Steel} (-0.3551 and -0.4512) and \texttt{Durables} (-0.2761 and -0.1056).
 
+%Some industry exposures exhibit interesting shifts between periods. The transportation sector (\texttt{Trans}) reverses from -0.1163 in training to 0.2022 in testing, while the construction sector (\texttt{Cnstr}) shifts from a substantial positive exposure (0.2890) to a slight negative one (-0.0143). These changes reflect the dynamic nature of sector relationships between the target and synthetic assets over time.
+
+The model's explanatory power improves markedly from the training to testing period, with the adjusted $R^2$ increasing from 0.0687 to 0.2525. Both models are statistically significant based on their $F$-statistics (10.5893 and 19.7223) with $p$-values below 0.0001. This improvement in fit suggests that the factor structure identified during the training period becomes more pronounced during the testing period, potentially enhancing the strategy's effectiveness.
+
+These results demonstrate that while our synthetic control methodology successfully creates a close match to the target asset, systematic differences in factor exposures remain that can be exploited by our trading strategy. In particular, the significant exposures to fundamental factors like profitability and long-term reversal, alongside pronounced industry tilts, represent potential sources of alpha that our pairs trading approach can capitalize on.
