--- a/Arbitrage-Lab/__main__.tex
+++ b/Arbitrage-Lab/__main__.tex
@@ -14,14 +14,14 @@ Pairs-Trading a Sparse Synthetic Control
 {  
 {
 %----------------------------------------------------
-%\large 
-%Jesus Villota Miranda}$^{\dagger}$
-%\footnote{
-%\scriptsize{
-%%%I am deeply grateful to [...].
-%%% This paper is intended for academic purposes only and does not constitute financial advice. The strategies and methodologies discussed involve risks, including the potential loss of capital. Past performance is not indicative of future results, and the authors assume no liability for decisions made by individuals or entities based on the content of this research. 
-%%%Finally, 
-%I gratefully acknowledge financial support from the Santander Research Chair at CEMFI.
+\large 
+Jesus Villota Miranda}$^{\dagger}$
+\footnote{
+\scriptsize{
+%%I am deeply grateful to [...].
+%% This paper is intended for academic purposes only and does not constitute financial advice. The strategies and methodologies discussed involve risks, including the potential loss of capital. Past performance is not indicative of future results, and the authors assume no liability for decisions made by individuals or entities based on the content of this research. 
+%%Finally, 
+I gratefully acknowledge financial support from the Santander Research Chair at CEMFI.
 %----------------------------------------------------
 }
 }
@@ -30,16 +30,16 @@ Pairs-Trading a Sparse Synthetic Control
 \bx 
 {\small
 %----------------------------------------------------
-%$\big{<}$
-%\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
-%$\big{>}$
-%
-%$\big{<}$
-%Email: \href{mailto:jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
-%$\big{>}$
-%
-%\small \textbf{This version: \mydate\today}
-%}
+$\big{<}$
+\noindent $^{\dagger}$CEMFI, Calle Casado del Alisal, 5, 28014 Madrid, Spain 
+$\big{>}$
+
+$\big{<}$
+Email: \href{mailto:jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
+$\big{>}$
+
+\small \textbf{This version: \mydate\today}
+}
 %----------------------------------------------------
 }
 \date{}
