[Improved the appendix]

--- a/Arbitrage-Lab/txt_Appendix.tex
+++ b/Arbitrage-Lab/txt_Appendix.tex
@@ -9,3 +9,7 @@
 %----------------------------------------------------
 \input{txt_A_algorithms.tex}
 %----------------------------------------------------
+
+%----------------------------------------------------
+\input{txt_A_copula_sampling.tex}
+%----------------------------------------------------
