--- a/Arbitrage-Lab/txt_2-2_Copulas.tex
+++ b/Arbitrage-Lab/txt_2-2_Copulas.tex
@@ -18,7 +18,7 @@ Let $(\Omega, \mathcal{F}, \mathbb{P})$ be a probability space and let $R, R^*: 
 Let $F_R$ and $F_{R^*}$ denote their respective cumulative distribution functions (CDFs).
 
 %==============[	  Definition: Bivariate Copula  ]==============
-\begin{definition}[Copula]
+\begin{definition}[Bivariate copula]
 A bivariate copula is a function $C: [0,1]^2 \to [0,1]$ satisfying:
 \begin{enumerate}
    \item $C(u,0) = C(0,v) = 0$ and $C(u,1) = u$, $C(1,v) = v$ for all $u,v \in [0,1]$ (boundary conditions)
@@ -30,7 +30,7 @@ The fundamental relationship between copulas and joint distributions is establis
 
 %==============[	  Sklar's Theorem  ]==============
 \begin{theorem}[Sklar (1959)]
-Let $F_{R,R^*}$ be the joint CDF of $(R,R^*)$. Then there exists a copula $C: [0,1]^2 \to [0,1]$ such that
+Let $F_{R,R^*}$ be the joint CDF of $(R,R^*)$. Then there exists a bivariate copula $C: [0,1]^2 \to [0,1]$ such that
 \begin{equation}
    F_{R,R^*}(r,r^*) = C(F_R(r), F_{R^*}(r^*)) \quad \forall r,r^* \in \mathbb{R}.
 \end{equation}
@@ -167,7 +167,7 @@ For each candidate copula family, we estimate parameters via constrained maximum
 %
 \begin{equation} \label{eq:mle}
 \hat{\theta} = \argmax_{\theta \in \Theta} \ell(\theta | \mbf {u,v}) \quad \text{where} \quad 
-\ell(\theta| \mbf {u,v}) := \sum_{t=2}^T \ln c_\theta(u_t, v_t)
+\ell(\theta| \mbf {u,v}) := \sum_{t\in\mathcal T_{tr}} \log c_\theta(u_t, v_t)
 .
 \end{equation}
 %
@@ -176,35 +176,120 @@ The optimization is subject to parameter constraints $\Theta$ specific to each c
 \begin{itemize}
 \item \textbf{Elliptical Copulas:}
    \begin{itemize}
-   \item Gaussian: $\Theta = \{\rho \in (-1,1)\}$ with density
-   \[
-   c_\rho^{Gauss}(u,v) = \frac{1}{\sqrt{1-\rho^2}} \exp\left(-\frac{\zeta_u^2 + \zeta_v^2 - 2\rho\zeta_u\zeta_v}{2(1-\rho^2)} + \frac{\zeta_u^2 + \zeta_v^2}{2}\right)
-   \]
-   where $\zeta_u = \Phi^{-1}(u)$, $\zeta_v = \Phi^{-1}(v)$ and $\Phi$ is the standard normal CDF.
+   \item \textbf{Gaussian}: $\Theta = \{\rho \in (-1,1)\}$ with density
+%$$
+%c_\rho^{Gauss}(u,v) = \frac{1}{\sqrt{1-\rho^2}} \exp\left(-\frac{\zeta_u^2 + \zeta_v^2 - 2\rho\zeta_u\zeta_v}{2(1-\rho^2)} + \frac{\zeta_u^2 + \zeta_v^2}{2}\right)
+%$$
+$$
+c(u, v) = \frac{1}{\sqrt{1-\rho^2}} \exp\left(-\frac{\rho^2(x^2 + y^2) - 2\rho xy}{2(1-\rho^2)}\right)
+$$
+   where $x = \Phi^{-1}(u)$, $y = \Phi^{-1}(v)$ and $\Phi$ is the standard normal CDF.
    
-   \item Student-$t$: $\Theta = \{\rho \in (-1,1), \nu > 2\}$ with density
-   \[
-   c_{\rho,\nu}^{t}(u,v) = \frac{\Gamma\left(\frac{\nu+2}{2}\right)\Gamma\left(\frac{\nu}{2}\right)}{\sqrt{1-\rho^2}\Gamma\left(\frac{\nu+1}{2}\right)^2} 
-   \frac{\left(1 + \frac{\zeta_u^2 + \zeta_v^2 - 2\rho\zeta_u\zeta_v}{\nu(1-\rho^2)}\right)^{-(\nu+2)/2}}{\prod_{i\in\{u,v\}} \left(1 + \frac{\zeta_i^2}{\nu}\right)^{-(\nu+1)/2}}
-   \]
-   where $\zeta_u = t_\nu^{-1}(u)$, $\zeta_v = t_\nu^{-1}(v)$ and $t_\nu$ is the Student-$t$ CDF.
+   \item \textbf{Student-$t$}: $\Theta = \{\rho \in (-1,1), \nu > 2\}$ with density
+%   \[
+%   c_{\rho,\nu}^{t}(u,v) = \frac{\Gamma\left(\frac{\nu+2}{2}\right)\Gamma\left(\frac{\nu}{2}\right)}{\sqrt{1-\rho^2}\Gamma\left(\frac{\nu+1}{2}\right)^2} 
+%   \frac{\left(1 + \frac{\zeta_u^2 + \zeta_v^2 - 2\rho\zeta_u\zeta_v}{\nu(1-\rho^2)}\right)^{-(\nu+2)/2}}{\prod_{i\in\{u,v\}} \left(1 + \frac{\zeta_i^2}{\nu}\right)^{-(\nu+1)/2}}
+%   \]
+$$
+c(u,v) = \frac{1}{\sqrt{1-\rho^2}} \cdot \frac{\Gamma(\frac{\nu+2}{2})\Gamma(\frac{\nu}{2})}{\Gamma(\frac{\nu+1}{2})^2} \cdot \frac{\left(1 + \frac{x^2 + y^2 - 2\rho xy}{\nu(1-\rho^2)}\right)^{-\frac{\nu+2}{2}}}{\left(1 + \frac{x^2}{\nu}\right)^{-\frac{\nu+1}{2}} \cdot \left(1 + \frac{y^2}{\nu}\right)^{-\frac{\nu+1}{2}}}
+$$
+
+   where $x = t_\nu^{-1}(u)$, $y = t_\nu^{-1}(v)$ and $t_\nu$ is the Student-$t$ CDF.
    \end{itemize}	
 
-\item \textbf{Archimedean Copulas:} For generator function $\psi_\theta$, 
-\[
-C_\theta(u,v) = \psi_\theta(\psi_\theta^{-1}(u) + \psi_\theta^{-1}(v))
-\]
+\item \textbf{Archimedean Copulas:} 
+%For generator function $\psi_\theta$, 
+%$$
+%C_\theta(u,v) = \psi^{-1}_\theta(\psi_\theta(u) + \psi_\theta(v))
+%$$
     \begin{itemize}
-    \item Clayton: $\Theta = (0, \infty)$ with $\psi_\theta(t) = (1 + t)^{-1/\theta}$
-    \item Gumbel: $\Theta = [1, \infty)$ with $\psi_\theta(t) = \exp(-t^{1/\theta})$
-    \item Frank: $\Theta = \mathbb{R}\setminus\{0\}$ with $\psi_\theta(t) = -\frac{1}{\theta}\ln\left(1 - (1 - e^{-\theta})e^{-t}\right)$
-    \item Joe: $\Theta = [1, \infty)$ with $\psi_\theta(t) = 1 - (1 - e^{-t})^{1/\theta}$
+    \item \textbf{Clayton}: $\Theta = [-1, \infty)\setminus \{0\}$ with density
+%$\psi_\theta(t) = \frac{1}{\theta}(t^{-\theta}-1)$
+$$
+c(u,v) = (1+\theta)(uv)^{-1-\theta}(u^{-\theta} + v^{-\theta} - 1)^{-2-\frac{1}{\theta}}
+$$
+    \item \textbf{Gumbel}: $\Theta = [1, \infty)$ with density
+$$
+c(u, v) = 
+\frac{1}{u \cdot v} 
+\cdot 
+\exp(-\Upsilon) 
+\cdot 
+\frac{\varphi(u)}{-\log u} 
+\cdot 
+\frac{\varphi(v)}{-\log v} 
+\cdot 
+(\theta + \Upsilon - 1)
+\cdot 
+\Upsilon^{1-2\theta}% EQUIVALENT TO % (\varphi(u) + \varphi(v))^{\frac{1}{\theta} - 2}
+$$
+where
+$\varphi(x):=(-\log x)^{\theta}$,
+and
+$\Upsilon := [\varphi(u) + \varphi(v)]^{\frac{1}{\theta}}$
+%$\psi_\theta(t) = \exp(-t^{1/\theta})$
+    \item \textbf{Frank}: $\Theta = \mathbb{R}\setminus\{0\}$ with density
+$$
+c(u, v) = 
+\frac{e^{\theta} \cdot e^{u\theta} \cdot e^{v\theta} \cdot (e^{\theta} - 1) \cdot \theta}{(e^{\theta} + e^{u\theta} \cdot e^{v\theta} - e^{\theta} \cdot e^{u\theta} - e^{\theta} \cdot e^{v\theta})^2}
+$$
+%$\psi_\theta(t) = -\frac{1}{\theta}\ln\left(1 - (1 - e^{-\theta})e^{-t}\right)$
+    \item \textbf{Joe}: $\Theta = [1, \infty)$ with density
+$$
+c(u, v) = 
+\frac{\zeta(u)}{1-u} 
+\cdot 
+\frac{\zeta(v)}{1-v} 
+\cdot 
+[\zeta(u) + \zeta(v) - \zeta(u)\zeta(v)]^{\frac{1}{\theta} - 2} 
+\cdot 
+\{\theta - [\zeta(u) - 1] \cdot [\zeta(v) - 1]\}
+\\
+$$
+where
+$\zeta(x):=(1-x)^{\theta}$.
+%$\tilde{u} = (1-u)^{\theta}$ and $\tilde{v} = (1-v)^{\theta}$.
+%$\psi_\theta(t) = 1 - (1 - e^{-t})^{1/\theta}$
     \end{itemize}
 
-\item \textbf{Mixed Copulas:}
     \begin{itemize}
-    \item N14: Rotated Clayton-Gumbel mixture with $\Theta \subset \mathbb{R}^2_+$
+    \item \textbf{N14} \footnote{For more details about this copula family, see \cite{Nelsen2006}; p. 116.}: $\Theta = [1,\infty)$ with density
+%See 
+    
+$$
+c(u, v) = 
+\frac{
+	\varrho(u) 
+	\cdot 
+	\varrho(v) 
+	\cdot 
+	(\xi - 1) 
+	\cdot 
+	[-1 + \theta + 2 \theta \cdot (\xi - 1)]
+}
+{
+	[\varrho(u) + \varrho(v)]^2 
+	\cdot
+	\xi^{2 + \theta} 
+	\cdot 
+	u \cdot v 
+	\cdot 
+	\eta(u) \cdot \eta(v) \cdot \theta}
+$$
+where 
+$\eta(x) := -1 + x^{1/\theta}$,
+$\varrho(x) := (-1 + x^{-1/\theta})^{\theta}$ and 
+$\xi := 1 + (\varrho(u) + \varrho(v))^{1/\theta}$.
     \end{itemize}
+    
+%----------------------------------------------------
+%\item \textbf{Mixed Copulas:}
+%\begin{itemize}
+%  \item CTG
+%  \item CFG
+%\end{itemize}
+%----------------------------------------------------
+    
 \end{itemize}
 
 
@@ -233,22 +318,31 @@ Contour plots of copula densities for various parametric families, illustrating 
 \subsubsection{Selection of an appropriate copula family}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-After estimating parameters for each candidate copula family $\mathcal{C} = \{C_\theta : \theta \in \Theta\}$, we select the optimal model using information criteria that balance goodness-of-fit against model complexity. Let $\ell(\hat{\theta}|\mbf {u,v}) = \max_{\theta\in\Theta} \sum_{t=2}^T \ln c_{{\theta}}(u_t, v_t)$ be the maximized log-likelihood for a copula with parameter estimate $\hat{\theta}$, where $T$ is the sample size and $k$ is the number of parameters. We evaluate the following information criterions:
+After estimating parameters for each candidate copula family $\mathcal{C} = \{C_\theta : \theta \in \Theta\}$, we select the optimal model using information criteria that balance goodness-of-fit against model complexity. Let $\ell(\hat{\theta}|\mbf {u,v}) = \max_{\theta\in\Theta} \sum_{t\in\mathcal T_{tr}} \ln c_{{\theta}}(u_t, v_t)$ be the in-sample maximized log-likelihood for a copula with parameter estimate $\hat{\theta}$, where $T_{tr}:=\card{\mathcal T_{tr}}$ is the sample size and $k$ is the number of parameters. We evaluate the following information criterions:
 $$
 \begin{array}{lllll}
-\text{\textit{Akaike}} &&& \text{AIC} &= 2k - 2
-%\ell(\hat{\theta}) 
-\ell(\hat{\theta}|\mbf {u,v})
-\\
-\text{\textit{Schwarz/Bayesian}} &&& \text{SIC} &= k\ln(T-1) - 2
-%\ell(\hat{\theta}) 
-\ell(\hat{\theta}|\mbf {u,v})
-\\
-\text{\textit{Hannan-Quinn}} &&& \text{HQIC} &= 2k\ln(\ln T-1) - 2
-%\ell(\hat{\theta})
-\ell(\hat{\theta}|\mbf {u,v})
+\text{\textit{Akaike}} &&& \text{AIC} &= [\fracc{2T_{tr}}{T_{tr}-k-1}] \cdot k - 2\ell(\hat{\theta}|\mathbf{u,v})
+\\[0.44em]
+\text{\textit{Schwarz/Bayesian}} &&& \text{SIC} &= k\ln(T_{tr}) - 2\ell(\hat{\theta}|\mathbf{u,v})
+\\[0.44em]
+\text{\textit{Hannan-Quinn}} &&& \text{HQIC} &= 2k\ln(\ln(T_{tr})) - 2\ell(\hat{\theta}|\mathbf{u,v})
 \end{array}
 $$
+%$$
+%\begin{array}{lllll}
+%\text{\textit{Akaike}} &&& \text{AIC} &= 2k - 2
+%%\ell(\hat{\theta}) 
+%\ell(\hat{\theta}|\mbf {u,v})
+%\\
+%\text{\textit{Schwarz/Bayesian}} &&& \text{SIC} &= k\ln(T-1) - 2
+%%\ell(\hat{\theta}) 
+%\ell(\hat{\theta}|\mbf {u,v})
+%\\
+%\text{\textit{Hannan-Quinn}} &&& \text{HQIC} &= 2k\ln(\ln T-1) - 2
+%%\ell(\hat{\theta})
+%\ell(\hat{\theta}|\mbf {u,v})
+%\end{array}
+%$$
 
 The copula family with the lowest value for a chosen criterion is selected as optimal. These criteria penalize overfitting through the $k$ term while rewarding better fit through the log-likelihood.
 %$\ell(\hat{\theta}|\mbf {u,v})$. 
